--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^16.8.5",
     "react-color": "^2.17.0",
     "react-dom": "^16.8.5",
+    "react-highlight.js": "^1.0.7",
     "react-jss": "git@github.com:/cssinjs/jss/tree/master/packages/react-jss"
   },
   "devDependencies": {
